--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^11.0.25",
     "lucide-react": "^0.366.0",
     "next": "14.1.4",
+    "node": "^18.20.2",
     "react": "^18",
     "react-dom": "^18"
   },
